# tests

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  actionlint.yaml  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  serve_ui.py  test_verify.html
.github/: actionlint.yaml
.github/workflows/: actionlint.yaml  cd.yml  ci.yml  release.yml
scripts/: batch_ingest.py  batch_ingest_transparent_by_dino.py  batch_sam3_chessboard.py  batch_sam3_preprocess.py  init-pgcrypto.sql  init-pgvector-postgis.sql  local-ci.sh  migrate_db_standalone.py  migrate_farm_zone_grid_idx.py  migrate_tree_grid_nullable.py  migrate_vector_dimension.py  reset_postgres_test_data.py
scripts/deploy/: deploy.sh  rollback.sh  setup-server.sh  update-version.sh
src/: __init__.py
src/api/: __init__.py  debugRoutes.py  dependencies.py  helpers.py  lifespan.py  trees.py
src/config/: __init__.py  appConfig.py  config.py  containers.py
src/dto/: __init__.py  common.py  ingestion.py  tree.py  verification.py
src/processor/: __init__.py  dinoProcessor.py  hierarchicalMatcher.py  lightGlueProcessor.py  sam3ImageProcessor.py  superPointProcessor.py
src/repository/: __init__.py  connectionManager.py  databaseManager.py  entityModels.py  milvusRepository.py  minioRepository.py  spatialEntityModels.py  sqlalchemyRepository.py
src/service/: __init__.py  hierarchicalMatchingService.py  ingestionService.py  preprocessorService.py  verificationService.py
src/utils/: __init__.py  imageCompressor.py  matchingStrategy.py  securityUtils.py  similarityUtils.py  validationUtils.py  visualizer.py
tests/: conftest.py
tests/e2e/: test_full_flows.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_connection_manager.py  test_entity_models.py  test_milvus_repository.py  test_minio_repository.py  test_processor_fixes.py  test_settings.py  test_sqlalchemy_repository.py  test_timestamp_filtering.py  test_tree_dto.py  test_verification_service.py
tools/: batch_remove_background.py
